As a user I want to see my accounts overview/data [Delivers #179780494]
